# updated_g2o

./: CMakeLists.txt  first_50.txt  functions.h  incremental_groundtruth.txt  main.cpp  odometry.txt
visualization scripts/: read_ground_truth.py  visualization.py
